# mix-ingest

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  SPEC.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: docker.yml
app/: __init__.py  jobs.py  main.py
mixingest/: __init__.py  cleanup.py  cli.py  config.py  download.py  errors.py  fetch.py  filing.py  index.py  lrc.py  models.py  naming.py  navidrome.py  pipeline.py  tagging.py  tl1001.py
mixingest/tracklist/: __init__.py  base.py  chapters.py  fingerprint.py  mixesdb.py  tracklists1001.py
scripts/: setup.sh  update-ytdlp.sh
systemd/: mix-update-ytdlp.service  mix-update-ytdlp.timer  mix.service
unraid/: mix-ingest.xml
